--- a/assets/css/components/_cards.css
+++ b/assets/css/components/_cards.css
@@ -9,6 +9,12 @@
 .card__image {
   z-index: -1;
   position: relative;
+}
+
+.card__image img {
+  width: 100%;
+  height: auto;
+  image-rendering: smooth;
   object-fit: cover;
 }
 
