--- a/content/about.njk
+++ b/content/about.njk
@@ -28,9 +28,9 @@ eleventyNavigation:
 
 {%- block main -%}
 <div class="dashboard">
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgwiggly">👯‍♀️ Social</h2>
+			<h2 class="bg-wiggly">👯‍♀️ Social</h2>
 		</header>
 		<div>
 			<ul class="unstyled">
@@ -40,9 +40,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgwiggly">✨ Personality</h2>
+			<h2 class="bg-wiggly">✨ Personality</h2>
 		</header>
 		<div>
 			<ul>
@@ -53,18 +53,18 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgdots">💖 Pseudonym</h2>
+			<h2 class="bg-dots">💖 Pseudonym</h2>
 		</header>
 		<div>
 			<p>Where's the name from? Well, once upon a time, I made a gnome mage on the Azune EU server on World of Warcraft. Her name was Frills. We travelled Azeroth together for years, then she lay dormant until her name was resurrected as my online presence.</p>
 			<p>I'll make a shrine to her one day.</p>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgdots">🗣 Languages</h2>
+			<h2 class="bg-dots">🗣 Languages</h2>
 		</header>
 		<div>
 			<ul>
@@ -73,9 +73,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bggrid">🍝 Food</h2>
+			<h2 class="bg-grid">🍝 Food</h2>
 		</header>
 		<div>
 			<ul>
@@ -87,9 +87,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgwiggly">📚 Books</h2>
+			<h2 class="bg-wiggly">📚 Books</h2>
 		</header>
 		<div>
 			<ul>
@@ -101,9 +101,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgwiggly">🎮 Games</h2>
+			<h2 class="bg-wiggly">🎮 Games</h2>
 		</header>
 		<div>
 			<ul>
@@ -114,9 +114,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bggrid">🧠 Interests</h2>
+			<h2 class="bg-grid">🧠 Interests</h2>
 		</header>
 		<div>
 			<ul>
@@ -128,9 +128,9 @@ eleventyNavigation:
 			</ul>
 		</div>
 	</article>
-	{# <article class="dashboard__item --card">
+	{# <article class="dashboard__item dashboard__item--card">
 		<header>
-			<h2 class="--bgwiggly">💬 Quote</h2>
+			<h2 class="bg-wiggly">💬 Quote</h2>
 		</header>
 		<div>
 			<blockquote>
