--- a/content/collections.njk
+++ b/content/collections.njk
@@ -30,7 +30,7 @@ style: '
 
 {% block main %}
 <section class="dashboard">
-  <article class="dashboard__item --card">
+  <article class="dashboard__item dashboard__item--card">
     <figure class="dashboard__item-image --square">
       <img src="/images/collections/stickers/cover.png" alt="" loading="lazy" role="presentation">
     </figure>
@@ -40,7 +40,7 @@ style: '
         </h2>
       </header>
   </article>
-  <article class="dashboard__item --card">
+  <article class="dashboard__item dashboard__item--card">
     <figure class="dashboard__item-image --square">
       <img src="/images/collections/avatars/cover.png" alt="" loading="lazy" role="presentation">
     </figure>
