--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -43,7 +43,7 @@ date: 2023-11-19
 </section>
 
 <div class="dashboard">
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
 			<h2>🐶 Profile</h2>
 		</header>
@@ -59,7 +59,7 @@ date: 2023-11-19
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
 			<h2>✨ Personality</h2>
 		</header>
@@ -75,7 +75,7 @@ date: 2023-11-19
 			</ul>
 		</div>
 	</article>
-	<article class="dashboard__item --card">
+	<article class="dashboard__item dashboard__item--card">
 		<header>
 			<h2>🦴 Likes</h2>
 		</header>
