--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -12,36 +12,7 @@
 
 /* Colours */
 /* Dark mode */
-:root {
-  --bodybg: #151a2f;
-  --bg: #0d0f19;
-  --bodyrgb: 13, 15, 25;
-  --highlight: Gold;
-  --accent: #FF5790;
-  --accentcontrast: Black;
-  --separator: PaleGreen;
-  --interactive: OrangeRed;
-  --input-bg: #151a2f;
-  --input-border: DeepSkyBlue;
-  --link: DeepPink;
-  --linkaccent: #620035;
-  --linkhover: SpringGreen;
-  --linkvisited: #ff5790;
-  --text: LavenderBlush;
-  --subtext: PeachPuff;
-  --dashboard-bg: Gold;
-  --dashboard-outline: Goldenrod;
-  --dashboard-text: Black;
-  --callout-info: DeepSkyBlue;
-  --logo-x: Gold;
-  --logo-anim-1: hsl(255, 70%, 70%);
-  --logo-anim-2: hsl(330, 70%, 70%);
-  --logo-anim-3: hsl(10, 100%, 60%);
-  --logo-anim-4: hsl(51, 100%, 60%);
-  --logo-anim-5: hsl(153, 70%, 70%);
-  --logo-anim-6: hsl(204, 70%, 70%);
-}
-
+html,
 html[data-scheme='dark'] {
   --bodybg: #151a2f;
   --bg: #0d0f19;
