--- a/assets/css/components/_buttonwall.css
+++ b/assets/css/components/_buttonwall.css
@@ -12,7 +12,7 @@
   content: '';
 }
 
-.buttonwall.--highcontrast .buttonwall__item a {
+.buttonwall--highcontrast .buttonwall__item a {
   background: var(--bg) !important;
   color: var(--text) !important;
   box-shadow: inset 0 0 0 1px var(--text) !important;
@@ -34,7 +34,7 @@
   text-align: center;
   transition: transform .4s ease;
   will-change: transform;
-  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .buttonwall__image img {
@@ -48,7 +48,7 @@
   height: 31px;
   background: #fff;
   overflow: hidden;
-  word-break: break-word;
+  word-break: normal;
   padding: 0 4px;
   text-decoration: none;
   font-weight: 700;
