--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -3,6 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
+    <link rel="me" href="https://indieweb.social/@frills">
     {# Favicon -#}
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
