--- a/content/index.njk
+++ b/content/index.njk
@@ -78,7 +78,7 @@ scripts: '
 		<article class="dashboard__item dashboard__item--neocities bg-wiggly">
 			<img src="/images/neocities.svg" alt="Neocities cat holding a paintbrush and spanner">
 			<div>
-				<a href="https://neocities.org/site/fri11s">Neocities profile</a>
+				<h2><a href="https://neocities.org/site/fri11s">Neocities profile</a></h2>
 				<p class="small">Follow me for updates!</p>
 			</div>
 		</article>
