--- a/assets/css/base/_form.css
+++ b/assets/css/base/_form.css
@@ -18,7 +18,7 @@ textarea {
     font-family: var(--font-family);
 }
 
-textarea.--code {
+textarea.textarea--code {
     font-family: monospace;
     white-space: wrap;
     font-size: 0.5rem;
