--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -5,8 +5,8 @@
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="me" href="https://indieweb.social/@frills">
     {# Favicon -#}
-    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     {# Style -#}
     <link href="/css/main.css?nocache=teehee" rel="stylesheet">
