✅ Validate CSS + HTML

--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -23,7 +23,7 @@ html[data-scheme='dark'] {
   --separator: PaleGreen;
   --interactive: OrangeRed;
   --input-bg: #151a2f;
-  --input-border: DeepSkyBlue;
+  --input-border: SpringGreen;
   --link: DeepPink;
   --linkaccent: #620035;
   --linkhover: SpringGreen;
@@ -56,11 +56,11 @@ html[data-scheme='dark'] {
     --highlight: #006a8e;
     --accent: #FF5790;
     --accentcontrast: Black;
-    --link: #89002a;
+    --link: #2a00bd;
     --linkaccent: #ffb8d0;
-    --linkhover: #bd003a;
-    --linkvisited: #2a00bd;
-    --text: #510019;
+    --linkhover: #1f008a;
+    --linkvisited: purple;
+    --text: #05134d;
     --subtext: DarkRed;
     --dashboard-bg: Gold;
     --dashboard-outline: Goldenrod;
@@ -86,11 +86,11 @@ html[data-scheme='light'] {
   --highlight: #006a8e;
   --accent: #FF5790;
   --accentcontrast: Black;
-  --link: #89002a;
+  --link: #2a00bd;
   --linkaccent: #ffb8d0;
-  --linkhover: #bd003a;
-  --linkvisited: #2a00bd;
-  --text: #510019;
+  --linkhover: #1f008a;
+  --linkvisited: purple;
+  --text: #05134d;
   --subtext: DarkRed;
   --dashboard-bg: Gold;
   --dashboard-outline: Goldenrod;
