--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -80,27 +80,34 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 10px;
+  gap: 1rem;
   background-color: var(--accent);
   position: relative;
   border-radius: 0.75rem;
+  padding: 0.3rem;
 }
 
 .dashboard__item--neocities p.small {
   margin: 0;
-  font-size: 60%;
+  font-size: 0.6rem;
+  line-height: 1;
   color: var(--accentcontrast);
 }
 
 .dashboard__item--neocities img {
   max-height: 50px;
-  padding: 0.3rem;
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.5));
+}
+
+.dashboard__item--neocities h2 {
+  margin-bottom: 0.2rem;
+  line-height: 1;
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .dashboard__item--neocities a {
   color: var(--accentcontrast);
-  font-size: 110%;
 }
 
 .dashboard__item--neocities a::before {
