--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -64,7 +64,7 @@ style: '
     .cssghost .ghost .smile::before {
         content: "";
         width: 100%;
-        aspect-ratio: 1;
+        aspect-ratio: 1 / 1;
         background-color: deeppink;
         border-radius: 100px;
         position: absolute;
