--- a/assets/css/pages/_homepage.css
+++ b/assets/css/pages/_homepage.css
@@ -82,14 +82,14 @@
     radial-gradient(15.37px at 50% calc(100% + 9.60px), #0000 99%, #000 101%) 50% calc(100% - 12px)/48px 100% repeat-x;
   mask: var(--mask);
   width: 100%;
-  aspect-ratio: 1;
+  aspect-ratio: 1 / 1;
   border-radius: 100px 100px 0 0;
   overflow: hidden;
 }
 
 .avatar__script {
   width: 100%;
-  aspect-ratio: 1;
+  aspect-ratio: 1 / 1;
 }
 
 .avatar__script img {
