--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -79,3 +79,14 @@ em {
   font-style: normal;
   color: var(--highlight);
 }
+
+blockquote {
+    border-left: 3px solid var(--separator);
+    margin-left: 0;
+    padding-left: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+blockquote p:last-child {
+    margin-bottom: 0;
+}
