--- a/content/rss/rss.njk
+++ b/content/rss/rss.njk
@@ -28,7 +28,11 @@
       <title>{{ post.data.title }}</title>
       <link>{{ absolutePostUrl }}</link>
       <description>{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</description>
+       {% if post.data.updated %}
+      <pubDate>{{ post.data.updated | dateToRfc822 }}</pubDate>
+      {% else %}
       <pubDate>{{ post.date | dateToRfc822 }}</pubDate>
+      {% endif %}
       <dc:creator>{{ metadata.author.name }}</dc:creator>
       <guid>{{ absolutePostUrl }}</guid>
     </item>
