🐛 Fix width of Neocities link on homepage

--- a/assets/css/layout/_dashboard.css
+++ b/assets/css/layout/_dashboard.css
@@ -85,6 +85,7 @@
   position: relative;
   border-radius: 0.75rem;
   padding: 0.3rem;
+  width: calc(100% - 0.6rem)
 }
 
 .dashboard__item--neocities p.small {
