--- a/content/rss/all.njk
+++ b/content/rss/all.njk
@@ -24,23 +24,31 @@
     <language>{{ metadata.language }}</language>
     {%- for post in collections.all | reverse %}
     {%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
-    {%- if post.data.rss -%}
+    {%- if post.data.rss %}
     <item>
-      {% if post.data.title|length %}
+      {%- if post.data.title|length %}
       <title>{{ post.data.title }}</title>
-      {% else %}
+      {%- else %}
       <title>{{ post.date | readableDate("d LLL yyyy") }}</title>
-      {% endif %}
+      {%- endif %}
+      {%- if post.data.tags == 'bookmarks' %}
+      <link>{{ post.data.url }}</link>
+      {%- else %}
       <link>{{ absolutePostUrl }}</link>
-      {% if post.data.updated %}
+      {%- endif %}
+      {%- if post.data.updated %}
       <pubDate>{{ post.data.updated | dateToRfc822 }}</pubDate>
-      {% else %}
+      {%- else %}
       <pubDate>{{ post.date | dateToRfc822 }}</pubDate>
-      {% endif %}
+      {%- endif %}
       <dc:creator>{{ metadata.author.name }}</dc:creator>
+      {%- if post.data.tags == 'bookmarks' %}
+      <guid>{{ post.data.url }}</guid>
+      {%- else %}
       <guid>{{ absolutePostUrl }}</guid>
+      {%- endif %}
     </item>
-    {% endif %}
+    {%- endif -%}
     {%- endfor %}
   </channel>
 </rss>
