--- a/assets/css/components/_nav.css
+++ b/assets/css/components/_nav.css
@@ -46,7 +46,7 @@
   background-color: var(--accent);
   border-radius: 10px;
   font-size: 10px;
-  color: var(--bg);
+  color: var(--accentcontrast);
   padding: 2px 5px;
   margin-left: 4px;
   font-weight: 700;
