--- a/content/index.njk
+++ b/content/index.njk
@@ -135,7 +135,7 @@ scripts: '
 		</article>
 	</div>
 	<div class="av-br">
-		<article class="dashboard__item dashboard__item--card --latestposts">
+		<article class="dashboard__item dashboard__item--card dashboard__item--latestposts">
 			<header>
 				<h2 class="bg-wiggly">Latest posts</h2>
 			</header>
