--- a/content/index.njk
+++ b/content/index.njk
@@ -65,7 +65,7 @@ scripts: '
 			<img src="/images/piclog/piclog0.jpg" alt="White woman (me) with brown hair wearing an orange hat looks away from the camera to the left." loading="lazy" width="100" height="100">
 		</figure>
 		<figure>
-			<img src="/images/piclog/piclog1.jpg" alt="The sun rises through the clouds over the sea with people walking out of the sea." loading="lazy" width="100" height="100">
+			<img src="/images/piclog/piclog1.jpg" alt="People walking out of the sea as the sun rises through the clouds behind them" loading="lazy" width="100" height="100">
 		</figure>
 	</article>
 	<div class="dashboard__item av-br">
@@ -117,7 +117,7 @@ scripts: '
 				<h2>Currently reading</h2>
 				',
 				body = '
-				<a href="https://www.goodreads.com/book/show/76707900-queen-of-shadows" class="hidden">Queen of Shadows - Sarah J Maas</a>
+				<a href="https://www.goodreads.com/book/show/76713323-empire-of-storms" class="hidden">Empire of Storms - Sarah J Maas</a>
 				'
 			)}}
 		</div>
