--- a/assets/css/pages/_experimentslist.css
+++ b/assets/css/pages/_experimentslist.css
@@ -15,3 +15,9 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+@media (min-width: 1600px) {
+  .experiments.cards {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
