⌚ Update Now page

--- a/content/now.njk
+++ b/content/now.njk
@@ -18,14 +18,11 @@ date: 2023-01-08
 
   <hr class="my-2">
 
-  <h2 class="pt-0">Current obsession</h2>
-  <p>Reading! A lot!</p>
-
   <h2>Days</h2>
   <ul>
+    <li>Creating a 5e Norse cleric for a solo adventure</li>
     <li>My theme for <a href="https://32bit.cafe/">32bit.cafe</a> is the default at the moment!</li>
     <li>Learning about the history of Witchcraft and casting protection spells.</li>
-    <li>Tarot reading study.</li>
     <li>GM'd a play through of <a href="https://gothhoblin.itch.io/trash-pals">Trash Pals</a> (my first GM experience).</li>
   </ul>
   {# ------------------------------ #}
