--- a/content/collections/avatars.njk
+++ b/content/collections/avatars.njk
@@ -116,6 +116,13 @@ style: ''
     </div>
     <div class="dashboard__item">
         <figure>
+            <a href="https://www.andycarolan.com/">
+                <img src="/images/collections/avatars/andycarolan-pink.png" alt="Avatar by Andy Carolan" loading="lazy">
+            </a>
+        </figure>
+    </div>
+    <div class="dashboard__item">
+        <figure>
             <a href="https://alexboucher.carbonmade.com/">
                 <img src="/images/collections/avatars/flowerveil.png" alt="Avatar by Flowerveil" loading="lazy">
             </a>
