--- a/assets/css/base/_list.css
+++ b/assets/css/base/_list.css
@@ -77,6 +77,7 @@ ul.colourpalette li {
   width: 2rem;
   mask-position: center;
   mask-repeat: no-repeat;
+  mask-size: contain;
 }
 
 ul.colourpalette li:nth-child(1) {
