--- a/content/links.njk
+++ b/content/links.njk
@@ -295,6 +295,11 @@ scripts: '<script>
     "href": "https://doqmeat.neocities.org",
     "src": "doqmeat.png",
     "type": "button"
+  }, {
+    "name": "Foreverliketh.is",
+    "href": "https://foreverliketh.is/",
+    "src": "foreverliketh.is.png",
+    "type": "button"
   }
 ] %}
 {% set friends = [
