--- a/content/index.njk
+++ b/content/index.njk
@@ -74,6 +74,19 @@ scripts: '
 		<p>I am Frills, the proud webmistress of this website in this wondrous wifi world, learn more <a href="/about">about me</a> or <a href="/site">about this website</a>.</p>
 		<p>Here you will find my latest <a href="/blog">thoughts</a> and <a href="/experiments">experiments</a>, <a href="/links">portals to other websites</a>, and <a href="/guestbook">messages</a> left by other wanderers.</p>
 	</div>
+	<div class="dashboard__item">
+		{{ macro.callout(
+				element = 'article',
+				modifiers = 'callout--small',
+				header = '<h2>Community event</h2>',
+				body = '
+					<a href="https://tilde.32bit.cafe/~ribose/events/valentines2024/" class="d-b mb-1"><img src="/images/32bit-cafe-vday.png" alt="32 bit cafe holidays"></a>
+					<ul class="unstyled mb-0">
+						<li>💖 Hosted by <a href="https://tilde.32bit.cafe/~ribose/events/valentines2024/">32 bit cafe</a>.</li>
+						<li>🗓️ 5 February - 12 February 2024</li>
+					</ul>
+			') }}
+	</div>
 	<div class="av-br">
 		<article class="dashboard__item dashboard__item--neocities bg-wiggly">
 			<img src="/images/neocities.svg" alt="Neocities cat holding a paintbrush and spanner">
