--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -7,12 +7,13 @@ h6 {
   margin: 0 0 0.5rem 0;
   line-height: 1.2
 }
-* + h1,
-* + h2,
-* + h3,
-* + h4,
-* + h5,
-* + h6 {
+
+*+h1,
+*+h2,
+*+h3,
+*+h4,
+*+h5,
+*+h6 {
   padding: 1rem 0 0 0;
 }
 
@@ -81,12 +82,32 @@ em {
 }
 
 blockquote {
-    border-left: 3px solid var(--separator);
-    margin-left: 0;
-    padding-left: 1.5rem;
-    margin-bottom: 1rem;
+  border-left: 3px solid var(--quote);
+  margin-left: 0;
+  padding-left: 1.5rem;
+  margin-bottom: 1rem;
+  color: var(--quote);
 }
 
+cite {
+  display: block;
+  margin-top: 1rem;
+  font-style: normal;
+  color: var(--subtext);
+}
+
+cite a:link,
+cite a:visited {
+  color: var(--quote);
+}
+
+cite::before {
+  content: '— ';
+  color: var(--quote);
+}
+
+
+
 blockquote p:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
