--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -85,7 +85,7 @@ blockquote {
   border-left: 3px solid var(--quote);
   margin-left: 0;
   padding-left: 1.5rem;
-  margin-bottom: 1rem;
+  margin: 0 0 1rem 0;
   color: var(--quote);
 }
 
