✨ Redesign About page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@
 @import url('./base/_core.css');
 @import url('./base/_list.css');
 @import url('./base/_page.css');
+@import url('./base/_page__empty.css');
 @import url('./base/_typography.css');
 @import url('./base/_backgrounds.css');
 
