--- a/content/now.njk
+++ b/content/now.njk
@@ -10,6 +10,7 @@ date: 2024-02-02
 {% extends 'structure/templates/page-2col.njk'%}
 
 {% block main %}
+<h1>{{title}}</h1>
 <article class="reading-width">
   <p>What I am up to today, this week, this month, this year.<br />
     Inspired by <a href="https://sneekrealm.neocities.org/now/">Sneek's</a> format of <a href="https://nownownow.com/about">nownownow</a> pages.</p>
