--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -12,8 +12,8 @@
 
 /* Colours */
 /* Dark mode */
-html,
-html[data-scheme='dark'] {
+:root,
+:root[data-scheme='dark'] {
   --bodybg: #151a2f;
   --bg: #0d0f19;
   --bodyrgb: 13, 15, 25;
@@ -77,7 +77,7 @@ html[data-scheme='dark'] {
   }
 }
 
-html[data-scheme='light'] {
+:root[data-scheme='light'] {
   --bodybg: #FFE6EE;
   --bg: #FFD7E4;
   --bodyrgb: 255, 250, 250;
