--- a/content/shrine/orla.njk
+++ b/content/shrine/orla.njk
@@ -7,6 +7,8 @@ date: 2023-11-19
 {% import "structure/components/components.njk" as macro with context %}
 
 {%- block left -%}
+<h1 class="visually-hidden">{{title}}</h1>
+
 <div class="bio">
 	<h2 class="visually-hidden">Bio</h2>
 	<img src="/images/shrine/orla/orla-bio.png" alt="A cut out of a pale yellow labrador with mud splatters on her face.">
