✨ Redesign About page

--- a/content/about-new.njk
+++ b/content/about-new.njk
@@ -17,24 +17,24 @@ scripts: '<link rel="stylesheet" href="/css/pages/about.css">'
 	<span class="bigboibanner">Internet witch</span>
 
 	<div class="character">
-		<div class="whodis">
-			<div class="itme-name">
+		<div class="whosthatgirl">
+			<div class="itsfrills-name">
 				<h2>Name</h2>
 				<p>Frills</p>
 			</div>
-			<div class="itme-race">
+			<div class="itsfrills-race">
 				<h2>Race</h2>
 				<p>Human</p>
 			</div>
-			<div class="itme-level">
+			<div class="itsfrills-level">
 				<h2>Level</h2>
 				<p>3X</p>
 			</div>
-			<div class="itme-alignment">
+			<div class="itsfrills-alignment">
 				<h2>Alignment</h2>
 				<p>Chaotic Good</p>
 			</div>
-			<div class="itme-something">
+			<div class="itsfrills-something">
 				<h2>Class</h2>
 				<p>Sorcerer</p>
 			</div>
