--- a/assets/css/pages/about.css
+++ b/assets/css/pages/about.css
@@ -49,7 +49,7 @@
   align-items: center;
 }
 
-.whodis {
+.whosthatgirl {
   width: 100%;
   flex: 1 1 100%;
   display: grid;
@@ -61,19 +61,19 @@
   overflow: hidden;
 }
 
-.whodis>* {
+.whosthatgirl>* {
   background-color: var(--bg);
   padding: 0.9rem 1.1rem;
   grid-column: span 2;
 
 }
 
-.itme-alignment,
-.itme-something {
+.itsfrills-alignment,
+.itsfrills-something {
   grid-column: span 3;
 }
 
-[class^="itme-"] h2 {
+[class^="itsfrills-"] h2 {
   font-family: "Shrikhand", var(--font-family);
   font-size: 2vw;
   font-weight: 400;
@@ -81,7 +81,7 @@
   margin-bottom: 0;
 }
 
-[class^="itme-"] p {
+[class^="itsfrills-"] p {
   font-size: 3.5vw;
   font-weight: 700;
   line-height: 1.1;
