✨ Redesign About page

--- a/content/about-new.njk
+++ b/content/about-new.njk
@@ -44,7 +44,7 @@ scripts: '<link rel="stylesheet" href="/css/pages/about.css">'
 		</div>
 	</div>
 
-	<div class="stats">
+	<div class="characterstats">
 		<h2 class="visually-hidden">Stats</h2>
 		{# 
 		8 = -1
