--- a/assets/css/pages/about.css
+++ b/assets/css/pages/about.css
@@ -5,7 +5,7 @@
   --bg: #FFCFDF;
   --bodyrgb: 13, 15, 25;
   --highlight: Gold;
-  --accent: #FFB7D0;
+  --accent: white;
   --accentcontrast: Black;
   --separator: #A00000;
   --quote: #A00000;
@@ -17,7 +17,7 @@
   --linkhover: #A00000;
   --linkvisited: #A00000;
   --text: #A00000;
-  --subtext: PeachPuff;
+  --subtext: #A00000;
   --dashboard-bg: Gold;
   --dashboard-outline: Goldenrod;
   --dashboard-text: Black;
@@ -30,6 +30,7 @@
   --logo-anim-5: #A00000;
   --logo-anim-6: #A00000;
   --border-width: 0.5vw;
+  --border-color: #FFB7D0;
 }
 
 
@@ -40,13 +41,29 @@
 .bigboibanner {
   font-family: "Shrikhand", var(--font-family);
   font-size: 10vw;
+  line-height: 1;
   text-transform: lowercase;
+  display: block;
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+  .bigboibanner {
+    margin-bottom: 0;
+  }
 }
 
 .character {
   display: flex;
-  gap: 60px;
+  gap: clamp(2rem, 5vw, 1000rem);
   align-items: center;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .character {
+    flex-direction: row;
+  }
 }
 
 .whosthatgirl {
@@ -54,9 +71,9 @@
   flex: 1 1 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  border: var(--border-width) solid var(--accent);
+  border: var(--border-width) solid var(--border-color);
   border-radius: 0.75rem;
-  background-color: var(--accent);
+  background-color: var(--border-color);
   gap: var(--border-width);
   overflow: hidden;
 }
@@ -65,7 +82,6 @@
   background-color: var(--bg);
   padding: 0.9rem 1.1rem;
   grid-column: span 2;
-
 }
 
 .itsfrills-alignment,
@@ -76,13 +92,14 @@
 [class^="itsfrills-"] h2 {
   font-family: "Shrikhand", var(--font-family);
   font-size: 2vw;
+  font-size: clamp(1rem, 2vw, 2rem);
   font-weight: 400;
   line-height: 1.1;
   margin-bottom: 0;
 }
 
 [class^="itsfrills-"] p {
-  font-size: 3.5vw;
+  font-size: clamp(1.25rem, 3.5vw, 3rem);
   font-weight: 700;
   line-height: 1.1;
   margin-bottom: 0;
@@ -90,39 +107,64 @@
 
 .piccy {
   border-radius: 1000px;
-  border: var(--border-width) solid var(--accent);
+  border: var(--border-width) solid var(--border-color);
   overflow: hidden;
-  flex: 0 0 20vw;
   display: flex;
   place-items: center;
   padding: calc(var(--border-width) * 2);
 }
 
-.piccy img {
-  height: 20vw;
-  width: 20vw;
-  border-radius: 1000px;
-  background-color: var(--accent);
+@media (min-width: 768px) {
+  .piccy {
+    flex: 0 0 20vw;
+  }
 }
 
-.stats {
+.piccy img {
+  border-radius: 1000px;
+  background-color: var(--border-color);
+}
+
+@media (min-width: 768px) {
+  .piccy img {
+    height: 20vw;
+    width: 20vw;
+  }
+}
+
+.characterstats {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(6, minmax(0, 1fr));;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  ;
   gap: 2.5rem;
   padding-top: 2rem;
 }
 
-.stats>* {
-  display: grid;
+@media (min-width: 768px) {
+  .characterstats {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+    ;
+  }
 }
 
-.stats>*>h3 {
-  grid-row: 5;
+.characterstats>* {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.characterstats>*>h3 {
   font-family: "Shrikhand", var(--font-family);
   font-weight: 400;
-  font-size: 1.5vw;
+  font-size: clamp(1rem, 1.5vw, 3rem);
+  ;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .bigstat,
@@ -141,17 +183,18 @@
 
 .bigstat {
   border-radius: 2vw;
-  font-size: 3.5vw;
+  font-size: clamp(1.5rem, 3.5vw, 5rem);
   aspect-ratio: 1 / 1;
-  width: 75%;
+  padding: 1rem;
 }
 
 .smolstat {
-  font-size: 1.5vw;
+  font-size: clamp(1rem, 1.5vw, 2rem);
+  font-family: var(--font-family);
   border-radius: 100px;
   border: var(--border-width) solid var(--bg);
-  width: calc(4vw - var(--border-width));
-  height: calc(4vw - var(--border-width));
-  margin-top: -2vw;
-  margin-bottom: 0.5rem;
+  padding: 4px 10px 2px 10px;
+  transform: translateY(-50%);
+  margin-bottom: 1rem;
+  min-width: 1.5rem;
 }
